= Changelog for Redis::Objects

== 0.4.0 

* Now dependent on redis-rb client 2.0.4 or later.  Should still be backwards compatible with redis-server 1.x

* Fixes to sets and sorted sets to bring them up to speed with redis-rb 2.0 from tomstuart [Tom Stuart]

* Refactoring to make constructors common across all object types from dbalatero [David Balatero]

* Renamed :withscores option to :with_scores for consistency with redis-rb 2.0, but kept backwards compat [Tom Stuart, Nate Wiger]

== 0.3.2 [Final] (21 July 2010)

* New "maxlength" option to Redis::List can create length-limited lists (eg, like a ring buffer) from dbalatero [David Balatero]

* Fix score conversions in Redis::SortedSet (scores are floats, not ints) from tomstuart [Tom Stuart]

* Switched from rspec to bacon for tests

== 0.3.1 [Final] (1 June 2010)

* Integrated fixes for sorted_set deletions from capotej [Julio Capote]

== 0.3.0 [Final] (14 April 2010)

* Due to Ruby 1.9 bugs and performance considerations, marshaling of data types is now OFF by default.  You must say :marshal => true for any objects that you want serialization enabled on. [Nate Wiger]

* Sorted Set class changed slightly due to feedback. You can now get an individual element back via @set['item'] since it acts like a Hash.

== 0.2.4 [Final] (9 April 2010)*

* Added sorted set support via Redis::SortedSet [Nate Wiger]

== 0.2.3 [Final] (18 February 2010)*

* Added lock expiration to Redis::Lock [Ben VandenBos]

* Fixed some bugs [Ben VandenBos]

* Added lock tests and test helpers [Ben VandenBos]

== 0.2.2 [Final] (14 December 2009)*

* Added @set.diff(@set2) with "^" and "-" synonyms (oversight). [Nate Wiger]

* Implemented Redis core commands in all data types, such as rename. [Nate Wiger]

* Renamed Redis::Serialize to Redis::Helpers::Serialize to keep Redis:: cleaner. [Nate Wiger]

* More spec coverage. [Nate Wiger]

== 0.2.1 [Final] (27 November 2009)*
